--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,9 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-email-1.3.2.jar}
+    ${file.reference.commons-email-1.3.2.jar}:\
+    ${libs.JavaMail.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -65,7 +67,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -81,6 +82,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=ecommerce_.war
+war.name=ProjetoEcommerce.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
